--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="container card-body">
             </div>
             <div class="button-container">
-                <button id="shuffleBtn">SHUFFLE</button>
-                <button id="sortBtn">SORT</button>
+                <button id="shuffleBtn" onclick="shuffleCards()">SHUFFLE</button>
+                <button id="sortBtn" onclick="sortCards()">SORT</button>
             </div>
         </div>
         <div class="footer">
